# Co_Track

./: .gitignore  README.md  package.json
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  document_parsing.py  image_analysis.py  main.py  model_processing.py  model_runtime.py  model_texturing.py  session_settings.py  texture_planning.py
backend/app/agents/: __init__.py  creative_dialogue_and_image_agent.py  intent_and_3d_generation_agent.py  pattern_asset_agent.py  stage3_review_agents.py  stage4_media_agent.py
backend/app/agents/providers/: __init__.py  provider_protocols.py  (+5 more)
backend/app/api/: __init__.py  ai.py  auth.py  deps.py  models.py  rtc.py  sessions.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  base.py  init_db.py  models.py  session.py
backend/app/graph/: __init__.py  contracts.py  engine.py  nodes.py  session_store.py  types.py
backend/app/llm/: __init__.py  client.py  json.py
backend/app/routes/: __init__.py  workflow.py
backend/app/schemas/: __init__.py  ai.py  auth.py  media.py  model.py  session.py
backend/app/socket/: __init__.py  server.py  state.py
backend/app/stages/: __init__.py  stage1_extract_concept.py  stage2_plan_3d_model.py  stage3_generate_creative_reply.py  stage4_generate_image_assets.py
backend/app/workflow/: __init__.py  controller.py
backend/tests/: test_ai_agents.py  test_aihubmix_media_provider.py  test_meshy_texture_provider.py  test_openai_text_image_provider.py  test_session_settings.py  test_stage1_goal1.py  test_stage3_review_agents.py
(+33 files in other folders)
