[project]
name = "co-track-backend"
version = "0.1.0"
description = "Co-Track backend with FastAPI + Socket.IO signaling"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.31.0",
  "python-socketio>=5.11.0",
  "sqlalchemy>=2.0.36",
  "pydantic-settings>=2.6.1",
  "httpx>=0.27.2",
  "langgraph>=0.2.56",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt==4.0.1",
  "python-multipart>=0.0.18",
  "numpy>=2.2.0",
  "Pillow>=11.0.0",
  "pygltflib>=1.16.2",
  "trimesh>=4.6.0",
  "xatlas>=0.0.10",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
